# klasbot

./: .gitignore  DLLP Sample.docx  DLP.docx  KAGGLE_WRITEUP.md  PLAN.md  README.md  SDL Sample.docx  pyproject.toml  requirements.txt
api/: index.py
curriculum_json/: matatag_english_grades_2_10_normalized.json  matatag_science_grades_3_10_normalized.json
deploy/: kiosk.sh  klasbot.service  setup-pi.sh  update.sh
docs/: ADMIN_GUIDE.md  PILOT_QA.md  QUIZ_PHOTO_GRADING_PLAN.md  STUDENT_MANAGEMENT_PLAN.md  kaggle_writeup.md
klasbot/: ai_provider.py  auth.py  config.py  curriculum.py  db.py  demo_seed.py  lesson_formats.py  main.py  ollama_client.py  print_utils.py  vertex_gemma_client.py
klasbot/curriculum_json/: MATATAG_AP_Grades4-10_curriculum.json  matatag_mathematics_cg.json
klasbot/grading/: __init__.py  detection.py  extraction.py  images.py  reports.py  scoring.py
klasbot/prompts/: __init__.py  assessment.py  class_insights.py  help.py  insights.py  language.py  lesson_plan.py  teaching_aid.py
klasbot/static/: app.js  index.html  mobile.css  mobile.html  mobile.js  styles.css
scripts/: import_curriculum_json.py  prompt_eval.py  run_lan_windows.ps1  seed_admin.py  seed_sample_classes.py  smoke_api.py
tests/: conftest.py  test_ai_provider.py  test_api.py  test_class_records.py  test_curriculum.py  test_db_auth.py  test_demo_seed.py  test_deploy_artifacts.py  test_editor_static.py  test_generation_print.py  test_grading_api.py  test_prompts.py  test_static_ui.py
